--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,3 @@
 {
-    "name": "cclark61/phpOpenFW",
-    "version": "1.2.2",
-    "dist": {
-        "url": "https://github.com/cclark61/phpOpenFW/archive/master.zip",
-        "type": "zip"
-    }
+    "name": "cclark61/phpOpenFW"
 }
