--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,17 @@
 {
     "name": "cclark61/phpOpenFW",
-    "version": "1.3.0",
+    "version": "1.3.1",
+	"require": {},
+	"require-dev": {},
+	"repositories": []
+	"scripts-dev": {
+		"post-install-cmd": [
+			"vendor/bin/security-checker security:check"
+		],
+		"post-update-cmd": [
+			"vendor/bin/security-checker security:check"
+		]
+	},
     "dist": {
         "url": "https://github.com/cclark61/phpOpenFW/archive/master.zip",
         "type": "zip"
