--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "version": "1.3.1",
 	"require": {},
 	"require-dev": {},
-	"repositories": []
+	"repositories": [],
 	"scripts-dev": {
 		"post-install-cmd": [
 			"vendor/bin/security-checker security:check"
